--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,12 +19,15 @@
     "eslint-config-next": "13.1.4",
     "next": "13.1.4",
     "react": "18.2.0",
+    "react-card-flip": "^1.2.0",
     "react-dom": "18.2.0",
+    "sass": "^1.57.1",
     "typescript": "4.9.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
+    "prettier": "2.8.3",
     "tailwindcss": "^3.2.4"
   }
 }
